# fastread

./: CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  flake.nix  index.html
.github/workflows/: pages.yml
src/: main.rs
