[package]
name = "fastread"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
web-time = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
